--- a/project/src/main/res/layout/section_car_category_summary.xml
+++ b/project/src/main/res/layout/section_car_category_summary.xml
@@ -1,98 +1,144 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="144dp"
-    android:background="#555555">
+    android:layout_height="match_parent"
+    card_view:cardCornerRadius="4dp">
 
-    <com.expedia.bookings.widget.OptimizedImageView
-        android:id="@+id/background_image_view"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content">
 
-    <RelativeLayout
-        android:id="@+id/details_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:paddingBottom="16dp"
-        android:paddingLeft="16dp">
-
-        <TextView
-            android:id="@+id/category_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#FFF"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            tools:text="ECONOMY" />
+        <com.expedia.bookings.widget.OptimizedImageView
+            android:id="@+id/background_image_view"
+            android:layout_width="match_parent"
+            android:layout_height="144dp" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:id="@+id/details_container"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/category_text"
-            android:orientation="horizontal">
+            android:layout_alignBottom="@+id/background_image_view"
+            android:orientation="horizontal"
+            android:padding="12dp">
+
+            <TextView
+                android:id="@+id/category_text"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:textColor="#FFF"
+                android:gravity="left"
+                android:textStyle="bold"
+                android:layout_gravity="left"
+                android:textSize="18sp"
+                android:shadowColor="@color/cars_actionbar_text_color"
+                android:shadowDx="1"
+                android:shadowDy="1"
+                android:shadowRadius="2"
+                tools:text="ECONOMY" />
+
+            <TextView
+                android:id="@+id/category_price_text"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:gravity="right"
+                android:textStyle="bold"
+                android:layout_alignParentRight="true"
+                android:textColor="#FFF"
+                android:textSize="18sp"
+                android:shadowColor="@color/cars_actionbar_text_color"
+                android:shadowDx="1"
+                android:shadowDy="1"
+                android:shadowRadius="2"
+                tools:text="$10" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/price_container"
+            android:layout_width="match_parent"
+            android:background="@android:color/white"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/background_image_view"
+            android:layout_alignParentLeft="true"
+            android:orientation="horizontal"
+            android:padding="12dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="4dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/person" />
 
             <TextView
                 android:id="@+id/passenger_count"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textColor="#FFF"
-                android:textSize="14sp"
-                tools:text="5" />
+                android:layout_gravity="center_vertical"
+                android:padding="2dp"
+                android:layout_marginRight="4dp"
+                android:textColor="@color/cars_actionbar_text_color"
+                android:textSize="12sp"
+                android:text="5" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="4dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/baggage" />
+
 
             <TextView
                 android:id="@+id/bag_count"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="4dp"
                 android:layout_marginRight="4dp"
-                android:layout_weight="1"
-                android:textColor="#FFF"
-                android:textSize="14sp"
-                tools:text="3" />
+                android:layout_gravity="center_vertical"
+                android:padding="2dp"
+                android:textColor="@color/cars_actionbar_text_color"
+                android:textSize="12sp"
+                android:text="3" />
+
+            <ImageView
+                android:layout_gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_marginLeft="4dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/doors" />
 
             <TextView
                 android:id="@+id/door_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:padding="2dp"
+                android:layout_marginRight="4dp"
+                android:textColor="@color/cars_actionbar_text_color"
+                android:textSize="12sp"
+                android:text="4" />
+
+
+            <TextView
+                android:id="@+id/total_price_text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="right|center_vertical"
+                android:gravity="right"
+                android:layout_marginLeft="4dp"
                 android:layout_weight="1"
-                android:textColor="#FFF"
-                android:textSize="14sp"
-                tools:text="4" />
+                android:textColor="@color/cars_actionbar_text_color"
+                android:textSize="12sp"
+                tools:text="Total $2132" />
         </LinearLayout>
+
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/price_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/details_container"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:paddingBottom="16dp"
-        android:paddingRight="16dp">
-
-        <TextView
-            android:id="@+id/category_price_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:textColor="#FFF"
-            android:textSize="28sp"
-            tools:text="$10" />
-
-        <TextView
-            android:id="@+id/total_price_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/category_price_text"
-            android:textColor="#FFF"
-            android:textSize="14sp"
-            tools:text="Total $2132" />
-    </RelativeLayout>
-</RelativeLayout>
+</android.support.v7.widget.CardView>
