--- a/project/src/main/res/layout/section_car_offer_row.xml
+++ b/project/src/main/res/layout/section_car_offer_row.xml
@@ -1,60 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
-    android:background="#FFF">
-
-    <TextView
-        android:id="@+id/vendor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="26sp"
-        tools:text="Hertz" />
-
-    <TextView
-        android:id="@+id/car_details"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/vendor"
-        android:textSize="22sp"
-        tools:text="UFO or similar" />
-
-    <TextView
-        android:id="@+id/address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/price_container"
-        android:layout_below="@id/car_details"
-        android:textSize="18sp"
-        tools:text="114 Sansome St.\nSan Francisco, CA 94109" />
+    android:animateLayoutChanges="true"
+    android:layout_height="match_parent"
+    android:background="#FFF"
+    card_view:cardCornerRadius="4dp">
 
     <RelativeLayout
-        android:id="@+id/price_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:paddingBottom="16dp"
-        android:paddingRight="16dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/category_price_text"
+            android:id="@+id/vendor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:textSize="28sp"
-            tools:text="$10" />
+            android:paddingLeft="16dp"
+            android:paddingTop="16dp"
+            android:textSize="22sp"
+            android:textColor="@color/cars_actionbar_text_color"
+            tools:text="Hertz" />
 
         <TextView
-            android:id="@+id/total_price_text"
+            android:id="@+id/car_details"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/category_price_text"
+            android:textColor="@color/cars_actionbar_text_color"
+            android:layout_below="@id/vendor"
+            android:paddingLeft="16dp"
             android:textSize="14sp"
-            tools:text="Total $2132" />
+            tools:text="UFO or similar" />
+
+        <TextView
+            android:id="@+id/address"
+            android:layout_width="wrap_content"
+            android:textColor="@color/cars_actionbar_text_color"
+            android:layout_height="wrap_content"
+            android:paddingLeft="16dp"
+            android:paddingBottom="16dp"
+            android:gravity="bottom"
+            android:layout_alignBottom="@id/price_container"
+            android:layout_below="@id/car_details"
+            android:textSize="12sp"
+            tools:text="114 Sansome St.\nSan Francisco, CA 94109" />
+
+        <RelativeLayout
+            android:id="@+id/price_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:padding="16dp">
+
+            <TextView
+                android:id="@+id/category_price_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:textColor="@color/cars_primary_color"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                tools:text="Daily $10" />
+
+            <TextView
+                android:id="@+id/total_price_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/category_price_text"
+                android:textColor="@color/cars_actionbar_text_color"
+                android:textSize="12sp"
+                tools:text="Total $2132" />
+
+            <ToggleButton
+                android:layout_width="wrap_content"
+                android:layout_height="43dp"
+                android:layout_marginTop="16dp"
+                android:paddingTop="6dp"
+                android:paddingBottom="6dp"
+                android:paddingLeft="24dp"
+                android:paddingRight="24dp"
+                android:textColor="@android:color/white"
+                android:layout_below="@+id/total_price_text"
+                android:id="@+id/reserve_now"
+                android:textAllCaps="false"
+                android:background="@drawable/cars_toogle_background_selector"
+                android:textOn="Reserve"
+                android:textOff="View Details" />
+        </RelativeLayout>
+
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/map_view"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:paddingBottom="28dp"
+            app:liteMode="true"
+            android:layout_below="@id/price_container"
+            app:mapType="normal" />
+
+        <TextView
+            android:id="@+id/map_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/map_view"
+            android:paddingLeft="16dp"
+            android:paddingTop="8dp"
+            android:background="@android:color/white"
+            android:alpha=".9"
+            android:textColor="@color/cars_actionbar_text_color"
+            android:textSize="10dp"
+            android:text="Desk &amp; vehicle at terminal"
+            android:paddingBottom="8dp"
+            android:paddingRight="16dp" />
     </RelativeLayout>
 
-</RelativeLayout>
+</android.support.v7.widget.CardView>
