--- a/project/src/main/res/layout/widget_car_search_params.xml
+++ b/project/src/main/res/layout/widget_car_search_params.xml
@@ -2,70 +2,34 @@
 <com.expedia.bookings.widget.CarSearchParamsWidget xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#F7F7F7">
+    android:layout_height="match_parent">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_gravity="top"
+        android:minHeight="?attr/actionBarSize" />
 
     <RelativeLayout
         android:id="@+id/search_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:paddingBottom="16dp"
-        android:paddingTop="16dp">
+        android:layout_below="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:id="@+id/search_header"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:orientation="horizontal">
-
-            <ImageButton
-                android:id="@+id/backout_btn"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:background="@drawable/fab_button"
-                android:padding="5dp"
-                android:scaleType="centerInside"
-                android:src="@drawable/ic_close_white_48dp"
-                android:tint="@color/cars_actionbar_text_color"/>
-
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left|center_vertical"
-                android:layout_weight="1"
-                android:padding="5dp"
-                android:text="@string/dates_and_location"
-                android:textColor="@color/cars_actionbar_text_color"
-                android:textSize="18sp"
-                android:textStyle="bold"/>
-
-            <ImageButton
-                android:id="@+id/search_btn"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:background="@drawable/fab_button"
-                android:padding="5dp"
-                android:scaleType="centerInside"
-                android:src="@drawable/ic_done_white_48dp"
-                android:tint="@color/cars_actionbar_text_color"/>
-        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/location_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/search_header"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             android:focusable="true"
             android:focusableInTouchMode="true"
+            android:layout_alignParentTop="true"
             android:orientation="horizontal">
 
             <AutoCompleteTextView
@@ -74,18 +38,20 @@
                 android:layout_width="0dp"
                 android:layout_height="43dp"
                 android:layout_marginLeft="8dp"
+                android:layout_marginBottom="8dp"
                 android:layout_marginRight="4dp"
                 android:layout_weight="1"
                 android:completionThreshold="1"
                 android:dropDownAnchor="@+id/location_container"
                 android:hint="@string/pick_up_location"
-                android:imeOptions="actionDone"/>
+                android:imeOptions="actionDone" />
 
             <com.expedia.bookings.widget.TextView
                 android:id="@+id/dropoff_location"
                 style="@style/CarAutocomplete"
                 android:layout_width="0dp"
                 android:layout_height="43dp"
+                android:layout_marginBottom="8dp"
                 android:layout_marginLeft="4dp"
                 android:layout_marginRight="8dp"
                 android:layout_weight="1"
@@ -93,7 +59,7 @@
                 android:hint="@string/same_as_pick_up"
                 android:textColor="@color/cars_dropdown_disabled_stroke"
                 android:textColorHint="@color/cars_dropdown_disabled_stroke"
-                app:textStyle="normal"/>
+                app:textStyle="normal" />
         </LinearLayout>
 
         <ToggleButton
@@ -106,19 +72,21 @@
             android:background="@drawable/cars_button_background_selector"
             android:drawableLeft="@drawable/cars_button_circle"
             android:drawablePadding="12dp"
-            android:gravity="left|center_vertical"
+            android:textAllCaps="false"
             android:paddingLeft="13dp"
+
+            android:gravity="left|center_vertical"
             android:paddingRight="5dp"
             android:textColor="@drawable/cars_text_selector"
             android:textOff="@string/select_pickup_and_dropoff_dates"
             android:textOn="@string/select_pickup_and_dropoff_dates"
-            android:textSize="14sp"/>
+            android:textSize="14sp" />
     </RelativeLayout>
 
     <include
         android:id="@+id/calendar_container"
         layout="@layout/widget_car_date_time"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
 </com.expedia.bookings.widget.CarSearchParamsWidget>
