--- a/project/src/main/res/layout/widget_slide_to_jb.xml
+++ b/project/src/main/res/layout/widget_slide_to_jb.xml
@@ -10,9 +10,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="24dp"
-        android:layout_marginLeft="24dp"
         android:src="@drawable/slide_slider"
         android:contentDescription="@string/cd_slide_to_checkout_start"/>
 
@@ -38,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/slider_text"
+        android:layout_alignParentRight="true"
         android:src="@drawable/slide_finish_unchecked"
         android:visibility="invisible"
         android:contentDescription="@string/cd_slide_to_checkout_end"/>
