--- a/project/src/main/res/values/attrs.xml
+++ b/project/src/main/res/values/attrs.xml
@@ -67,6 +67,7 @@
     <declare-styleable name="SlideToWidget">
         <attr name="sliderText" format="string" />
         <attr name="sliderImage" format="reference" />
+        <attr name="sliderBackgroundColor" format="color" />
         <attr name="dragImage" format="reference" />
         <attr name="destImage" format="reference" />
         <attr name="destComplete" format="reference" />
@@ -218,7 +219,7 @@
 
     <!-- ContentClickableRelativeLayout -->
     <declare-styleable name="ContentClickableRelativeLayout">
-        <attr name="contentPadding" format="dimension" />
+        <attr name="layoutContentPadding" format="dimension" />
     </declare-styleable>
 
     <!-- SwipeOutLayout style -->
@@ -247,19 +248,19 @@
     <!-- Drawable to use as the "thumb" that switches back and forth. -->
         <attr name="thumb" format="reference" />
         <!-- Drawable to use as the "track" that the switch thumb slides within. -->
-        <attr name="track" format="reference" />
+        <attr name="thumbTrack" format="reference" />
         <!-- Text to use when the switch is in the checked/"on" state. -->
         <attr name="textOn" format="reference" />
         <!-- Text to use when the switch is in the unchecked/"off" state. -->
         <attr name="textOff" format="reference" />
         <!-- Amount of padding on either side of text within the switch thumb. -->
-        <attr name="thumbTextPadding" format="dimension" />
+        <attr name="textPadding" format="dimension" />
         <!-- TextAppearance style for text displayed on the switch thumb. -->
-        <attr name="switchTextAppearance" format="reference" />
+        <attr name="thumbTextAppearance" format="reference" />
         <!-- Minimum width for the switch component -->
-        <attr name="switchMinWidth" format="dimension" />
+        <attr name="thumbMinWidth" format="dimension" />
         <!-- Minimum space between the switch and caption text -->
-        <attr name="switchPadding" format="dimension" />
+        <attr name="thumbPadding" format="dimension" />
     </declare-styleable>
     <declare-styleable name="Theme">
         <attr name="switchStyle" format="reference" />
