--- a/project/src/main/res/values/styles.xml
+++ b/project/src/main/res/values/styles.xml
@@ -613,14 +613,14 @@
 
     <!-- Styles for our custom Switch -->
     <style name="Widget.CompoundButton.Switch" parent="android:Widget.CompoundButton">
-        <item name="track">@drawable/btn_tablet_filter_normal</item>
+        <item name="thumbTrack">@drawable/btn_tablet_filter_normal</item>
         <item name="thumb">@drawable/btn_tablet_filter_switch</item>
-        <item name="switchTextAppearance">@style/TextAppearance.Widget.Switch</item>
+        <item name="thumbTextAppearance">@style/TextAppearance.Widget.Switch</item>
         <item name="textOn">@string/switch_on</item>
         <item name="textOff">@string/switch_off</item>
-        <item name="thumbTextPadding">13dip</item>
-        <item name="switchMinWidth">100dip</item>
-        <item name="switchPadding">15dip</item>
+        <item name="textPadding">13dip</item>
+        <item name="thumbMinWidth">100dip</item>
+        <item name="thumbPadding">15dip</item>
     </style>
     <style name="TextAppearance.Widget.Switch" parent="android:TextAppearance.Small">
         <item name="android:textColor">@color/sliding_group_text_bright</item>
