--- a/project/src/main/res/values/styles_cars.xml
+++ b/project/src/main/res/values/styles_cars.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <style name="V2.Theme.Cars" parent="@android:style/Theme.Holo.Light">
+    <style name="V2.Theme.Cars" parent="@style/Theme.AppCompat.Light">
+        <item name="windowActionBar">false</item>
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
+        <item name="android:textColorSecondary">@android:color/white</item>
+        <item name="android:colorPrimaryDark">#532C45</item>
     </style>
 
+    <style name="CarsActionBarTitle" parent="V2.Theme.Cars">
+        <item name="android:textStyle">normal</item>
+    </style>
 </resources>
