Presenter refactor and fix tests

--- a/project/src/main/res/layout/activity_cars.xml
+++ b/project/src/main/res/layout/activity_cars.xml
@@ -8,18 +8,21 @@
         android:id="@+id/widget_car_params"
         layout="@layout/widget_car_search_params"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
 
     <include
         android:id="@+id/cars_results_presenter"
         layout="@layout/cars_results_presenter"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
 
     <include
         android:id="@+id/car_checkout_presenter"
         layout="@layout/car_checkout_presenter"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
 
 </com.expedia.bookings.presenter.CarsPresenter>
