--- a/project/src/main/res/values/styles_cars.xml
+++ b/project/src/main/res/values/styles_cars.xml
@@ -7,6 +7,7 @@
         <item name="android:windowNoTitle">true</item>
         <item name="android:textColorSecondary">@android:color/white</item>
         <item name="android:colorPrimaryDark">#532C45</item>
+        <item name="colorControlNormal">#C3C3C3</item>
     </style>
 
     <style name="CarsActionBarTitle" parent="V2.Theme.Cars">
