--- a/project/src/main/res/layout/car_checkout_presenter.xml
+++ b/project/src/main/res/layout/car_checkout_presenter.xml
@@ -13,6 +13,7 @@
         android:id="@+id/confirmation"
         layout="@layout/widget_car_confirmation"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:visibility="gone" />
 
 </com.expedia.bookings.presenter.CarCheckoutPresenter>
