Implement inital lx details with tests.
Minor refactor of RecyclerGallery so as to use the same in LX.
Instead of passing List<Media> to adapter, we are passing List<Imedia> and
created LXMedia.java.

--- a/project/src/main/res/values/dimens.xml
+++ b/project/src/main/res/values/dimens.xml
@@ -254,6 +254,9 @@
 
     <!-- LX Dimens -->
     <dimen name="search_widget_calendar_height">220dp</dimen>
+    <dimen name="gallery_height">270dp</dimen>
+    <dimen name="price_info_container_height">60dp</dimen>
+    <dimen name="price_info_container_top_margin">-60dp</dimen>
 
     <!-- Car Search  -->
     <dimen name="car_calendar_month_view_max_text_size">12dp</dimen>
