--- a/project/src/main/res/layout/lx_base_layout.xml
+++ b/project/src/main/res/layout/lx_base_layout.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.expedia.bookings.presenter.lx.LXPresenter
+<com.expedia.bookings.presenter.lx.LXPresenter xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/lx_base_presenter"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -13,6 +12,11 @@
     <include
         android:id="@+id/search_list_presenter"
         layout="@layout/lx_result_presenter"
+        android:visibility="gone" />
+
+    <include
+        android:id="@+id/activity_details_presenter"
+        layout="@layout/lx_details_presenter"
         android:visibility="gone" />
 
 </com.expedia.bookings.presenter.lx.LXPresenter>
