--- a/project/src/main/res/layout/widget_car_search_params.xml
+++ b/project/src/main/res/layout/widget_car_search_params.xml
@@ -1,20 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.expedia.bookings.widget.CarSearchParamsWidget xmlns:android="http://schemas.android.com/apk/res/android"
+<com.expedia.bookings.widget.CarSearchPresenter xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="#D9FFFFFF"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:layout_gravity="top"
-        android:minHeight="?attr/actionBarSize" />
-
     <LinearLayout
+        android:id="@+id/search_container"
         android:layout_width="match_parent"
         android:orientation="vertical"
+        android:background="#D9FFFFFF"
         android:paddingTop="?attr/actionBarSize"
         android:layout_height="match_parent">
 
@@ -90,4 +84,11 @@
 
     </LinearLayout>
 
-</com.expedia.bookings.widget.CarSearchParamsWidget>
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_gravity="top"
+        android:minHeight="?attr/actionBarSize" />
+
+</com.expedia.bookings.widget.CarSearchPresenter>
